--- a/source-css/thebelletower.css
+++ b/source-css/thebelletower.css
@@ -580,3 +580,273 @@ a[href="/sbdoesnotapprove"]{
     height:110px;
     background-position: -280px -280px;
 }
+
+a[href="/confidentscoots"],
+a[href="/scootacomfy"],
+a[href="/scootahey"],
+a[href="/masterofdrums"],
+a[href="/drepressedscoots"],
+a[href="/scootasurprised"],
+a[href="/scootadashlove"],
+a[href="/fillyhoofbump"],
+a[href="/scootheart"],
+a[href="/scootapaper"],
+a[href="/scootsseenthings"],
+a[href="/sparkaloo"],
+a[href="/sleepingscoots"],
+a[href="/scootasaywhat"],
+a[href="/intensehugs"],
+a[href="/icametowritefanfics"],
+a[href="/scootuh"],
+a[href="/scootayawn"],
+a[href="/letmetellyousomething"],
+a[href="/scootsdunno"],
+a[href="/scootaready"],
+a[href="/shockedscoots"],
+a[href="/wetscoots"],
+a[href="/scootafrown"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:133px;
+    height:202px;
+    background-image: url(%%scoot-ss01%%) !important;
+}
+a[href="/confidentscoots"]{
+    width:115px;
+    height:140px;
+    background-position: 0px 0px;
+}
+a[href="/scootacomfy"]{
+    width:112px;
+    height:128px;
+    background-position: -140px 0px;
+}
+a[href="/scootahey"]{
+    width:121px;
+    height:140px;
+    background-position: -280px 0px;
+}
+a[href="/masterofdrums"]{
+    width:135px;
+    height:140px;
+    background-position: -420px 0px;
+}
+a[href="/drepressedscoots"]{
+    width:140px;
+    height:80px;
+    background-position: -560px 0px;
+}
+a[href="/scootasurprised"]{
+    width:131px;
+    height:140px;
+    background-position: 0px -140px;
+}
+a[href="/scootadashlove"]{
+    width:208px;
+    height:140px;
+    background-position: -140px -140px;
+}
+a[href="/fillyhoofbump"]{
+    width:210px;
+    height:165px;
+    background-position: -350px -140px;
+}
+a[href="/scootheart"]{
+    width:124px;
+    height:202px;
+    background-position: -560px -140px;
+}
+a[href="/scootapaper"]{
+    width:91px;
+    height:140px;
+    background-position: 0px -280px;
+}
+a[href="/scootsseenthings"]{
+    width:65px;
+    height:140px;
+    background-position: -140px -280px;
+}
+a[href="/sparkaloo"]{
+    width:126px;
+    height:140px;
+    background-position: -210px -280px;
+}
+a[href="/sleepingscoots"]{
+    width:126px;
+    height:70px;
+    background-position: -350px -350px;
+}
+a[href="/scootasaywhat"]{
+    width:70px;
+    height:70px;
+    background-position: -490px -350px;
+}
+a[href="/intensehugs"]{
+    width:140px;
+    height:155px;
+    background-position: -560px -350px;
+}
+a[href="/icametowritefanfics"]{
+    width:70px;
+    height:121px;
+    background-position: 0px -420px;
+}
+a[href="/scootuh"]{
+    width:128px;
+    height:101px;
+    background-position: -70px -420px;
+}
+a[href="/scootayawn"]{
+    width:131px;
+    height:128px;
+    background-position: -210px -420px;
+}
+a[href="/letmetellyousomething"]{
+    width:179px;
+    height:140px;
+    background-position: -350px -420px;
+}
+a[href="/scootsdunno"]{
+    width:102px;
+    height:140px;
+    background-position: 0px -560px;
+}
+a[href="/scootaready"]{
+    width:140px;
+    height:84px;
+    background-position: -140px -560px;
+}
+a[href="/shockedscoots"]{
+    width:95px;
+    height:110px;
+    background-position: -280px -560px;
+}
+a[href="/wetscoots"]{
+    width:128px;
+    height:126px;
+    background-position: -420px -560px;
+}
+a[href="/scootafrown"]{
+    width:128px;
+    height:130px;
+    background-position: -560px -560px;
+}
+
+a[href="/honorarysister"],
+a[href="/nicemoves"],
+a[href="/scootamap"],
+a[href="/scootscantholdit"],
+a[href="/scootaflex"],
+a[href="/scootarelax"],
+a[href="/scootathink"],
+a[href="/lunaloo"],
+a[href="/scootastop"],
+a[href="/scootadown"],
+a[href="/grumpyscoots"],
+a[href="/gigglingscoots"],
+a[href="/scootapoke"],
+a[href="/scootathanks"],
+a[href="/scootapoint2"],
+a[href="/sleepflying"],
+a[href="/snoozaloo"],
+a[href="/scootuhwhat"],
+a[href="/scootagrin"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:70px;
+    height:70px;
+    background-image: url(%%scoot-ss02%%) !important;
+}
+a[href="/honorarysister"]{
+    width:163px;
+    height:176px;
+    background-position: 0px 0px;
+}
+a[href="/nicemoves"]{
+    width:140px;
+    height:139px;
+    background-position: -210px 0px;
+}
+a[href="/scootamap"]{
+    width:184px;
+    height:140px;
+    background-position: -350px 0px;
+}
+a[href="/scootscantholdit"]{
+    width:128px;
+    height:123px;
+    background-position: -560px 0px;
+}
+a[href="/scootaflex"]{
+    width:98px;
+    height:126px;
+    background-position: -210px -140px;
+}
+a[href="/scootarelax"]{
+    width:140px;
+    height:128px;
+    background-position: -350px -140px;
+}
+a[href="/scootathink"]{
+    width:127px;
+    height:128px;
+    background-position: -490px -140px;
+}
+a[href="/lunaloo"]{
+    width:154px;
+    height:200px;
+    background-position: 0px -210px;
+}
+a[href="/scootastop"]{
+    width:101px;
+    height:140px;
+    background-position: -210px -280px;
+}
+a[href="/scootadown"]{
+    width:128px;
+    height:126px;
+    background-position: -350px -280px;
+}
+a[href="/grumpyscoots"]{
+    width:122px;
+    height:128px;
+    background-position: -490px -280px;
+}
+a[href="/gigglingscoots"]{
+    width:180px;
+    height:176px;
+    background-position: 0px -420px;
+}
+a[href="/scootapoke"]{
+    width:191px;
+    height:140px;
+    background-position: -210px -420px;
+}
+a[href="/scootathanks"]{
+    width:140px;
+    height:137px;
+    background-position: -420px -420px;
+}
+a[href="/scootapoint2"]{
+    width:140px;
+    height:133px;
+    background-position: -560px -420px;
+}
+a[href="/sleepflying"]{
+    width:200px;
+    height:111px;
+    background-position: -210px -560px;
+}
+a[href="/snoozaloo"]{
+    width:200px;
+    height:115px;
+    background-position: -420px -560px;
+}
+a[href="/scootuhwhat"]{
+    background-position: -630px -560px;
+}
+a[href="/scootagrin"]{
+    background-position: -630px -630px;
+}
