--- a/source-css/maudpie.css
+++ b/source-css/maudpie.css
@@ -4,6 +4,10 @@ body { background: url(%%maudbackg%%) no-repeat fixed center bottom }
 
 #header-img { margin: 2px 5px -2px 2px }
 
+.side h6 del { color: inherit }
+.side sup:nth-of-type(1) { padding-left: 40px }
+.side .usertext-body ul a { font-weight: bold }
+
 .subscribers .word, .users-online .word { display: none }
 .subscribers .number:after { content: " rocks" }
 .users-online .number:after { content: " are gray" }
@@ -35,26 +39,23 @@ body { background: url(%%maudbackg%%) no-repeat fixed center bottom }
 
 /*** Rating Tags ***/
 
-
-.nsfw-stamp { color: #5f99cf }
-
-.nsfw-stamp acronym {
-  display: inline-block;
-  font-size: 0px !important;
-  letter-spacing: 0px;
-  overflow: hidden;
-  vertical-align: bottom;
-  margin-bottom:-1px ;
-  content: "";
+.nsfw-stamp {
+  color: #5f99cf;
+  padding: 0px 3px !important;
 }
 
-.nsfw-stamp acronym:after {
+.nsfw-stamp acronym{
+  display: inline-block;
+  font-size: 0px !important;
+}
+
+.nsfw-stamp acronym:after{
   color: #336699 !important;
   content: "PG" !important;
   display: block;
   font-size: x-small !important;
   text-decoration: none;
-  margin:-14px 2px 1px
+  margin-top: -14px;
 }
 
 .marknsfw-button a[href="#"], .unmarknsfw-button a[href="#"] {
