--- a/addon/bpmotes.css
+++ b/addon/bpmotes.css
@@ -143,7 +143,7 @@
 /*
  * Emotes button on Voat.
  */
-.voatbutton {
+.bpm-search-toggle-voat {
     display: inline-block;
     margin-top: 2px;
     margin-bottom: 2px;
